# Mondriaan

./: .gitignore  CMakeLists.txt  Makefile  README.md  clang-format.cmake  main.cpp  test.cpp
include/: Piet.h
lib/: CMakeLists.txt  clang-format.cmake
lib/include/: Runtime.h
lib/src/: CMakeLists.txt  runtime.cpp
lib/test/: CMakeLists.txt  test.cpp
src/: ColorTransition.cpp  DirectionPoint.cpp  Graph.cpp  Image.cpp  PNG.cpp  Parser.cpp  Reader.cpp  Translator.cpp
test/integration/hello-world/: hello-world.sh
test/integration/pi/: pi.sh
test/unit/: CMakeLists.txt  ParserTest.cpp
